--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hellow</h1>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>About me</title>
+	</head>
+	<body>
+		<h1>Hi! I go by the moniker MetaSlave!</h1>
+	</body>
+</html>
